--- a/app/src/main/res/layout/view_myplants.xml
+++ b/app/src/main/res/layout/view_myplants.xml
@@ -1,52 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="180dp"
-
-
     android:layout_height="190dp"
     app:cardCornerRadius="8dp"
     app:cardUseCompatPadding="true"
     app:elevation="8dp">
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="160dp"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="180dp"
+        android:orientation="vertical"
+        android:layout_margin="5dp"
+        app:cardCornerRadius="12dp"
+        >
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/farmer_myplant_plant_img_bg"
+                android:scaleType="centerCrop"
+                android:alpha="0.4"
+                />
 
         <LinearLayout
-            android:layout_width="160dp"
-
-
-            android:layout_height="190dp"
-            android:backgroundTint="@android:color/transparent"
-
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/bg_black_shade"
             android:orientation="vertical"
-
             android:weightSum="2">
 
 
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:cardCornerRadius="50dp"
+                android:layout_margin="20dp"
+
+                >
+
             <ImageView
-                android:id="@+id/farmer_myplant_plantimg"
+                android:id="@+id/farmer_myplant_plotimg"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="2" />
+                android:scaleType="centerCrop"
+                 />
+            </androidx.cardview.widget.CardView>
 
             <TextView
+                android:layout_marginTop="20dp"
                 android:id="@+id/farmer_myplant_plantName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
-                android:layout_weight="1"
-                android:text="PlantName"
+                android:text="Plant Name"
+                android:textColor="@color/white"
                 android:textAlignment="center"
-                android:textSize="22sp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/farmer_myplant_plotName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:layout_weight="1"
+                android:text="Plot Name"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="18sp" />
 
 
         </LinearLayout>
-    </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/farmer_myplant_id"
