--- a/app/src/main/res/layout/activity_farmer_confandwork.xml
+++ b/app/src/main/res/layout/activity_farmer_confandwork.xml
@@ -53,6 +53,7 @@
                     android:textSize="18sp"
                     android:textStyle="bold" />
                 <TextView
+                    android:id="@+id/dash_farmer_location"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
