--- a/app/src/main/res/layout/activity_farmer_news.xml
+++ b/app/src/main/res/layout/activity_farmer_news.xml
@@ -53,6 +53,7 @@
                     android:textSize="18sp"
                     android:textStyle="bold" />
                 <TextView
+                    android:id="@+id/dash_farmer_location"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -61,7 +62,6 @@
                     android:textColorHighlight="#279D5B"
                     android:textSize="12sp"
                     android:textStyle="bold" />
-                -
             </LinearLayout>
         </androidx.appcompat.widget.Toolbar>
 
