--- a/app/src/main/res/layout/view_farmer_news.xml
+++ b/app/src/main/res/layout/view_farmer_news.xml
@@ -3,13 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:padding="25px"
-    android:layout_height="match_parent">
+    android:padding="15px"
+    android:layout_height="270dp"
+    >
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        app:cardCornerRadius="5dp"
+        app:cardCornerRadius="10dp"
+        android:layout_marginHorizontal="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
