--- a/app/src/main/res/layout/activity_farmer_chat.xml
+++ b/app/src/main/res/layout/activity_farmer_chat.xml
@@ -2,10 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="match_parent">
 
-    >
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
@@ -67,54 +67,26 @@
         </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
-
-
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/farmer_tabs_layout"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/farmer_chat_recycler"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="65dp"
+        android:layout_marginBottom="40dp"
+        android:layout_marginHorizontal="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/farmer_chat_floating_add_message"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tabBackground="@drawable/back_selected"
-        app:tabIndicator="@android:color/transparent"
-        app:tabMode="auto"
-        app:tabContentStart="30dp"
-        app:tabPaddingEnd="20dp"
-        app:tabPaddingStart="20dp"
-        app:tabMinWidth="100dp"
-        app:tabTextAppearance="@style/TabTextStyle"
-        app:tabIndicatorColor="@android:color/transparent" >
-
-
-
-    </com.google.android.material.tabs.TabLayout>
-
-
-
-
-    <androidx.viewpager.widget.ViewPager
-
-        android:id="@+id/farmer_view_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="110dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:layout_marginBottom="40dp"
-        app:layout_constraintStart_toStartOf="parent"/>
-    <!--<include
-        layout="@layout/include_farmer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"
-        android:layout_marginBottom="40dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginBottom="52dp"
+        android:src="@android:drawable/stat_notify_chat"
         app:layout_constraintBottom_toTopOf="@+id/tabs_layout_nav"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />-->
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <LinearLayout
         android:id="@+id/tabs_layout_nav"
