--- a/app/src/main/res/drawable/senderchatdrawable.xml
+++ b/app/src/main/res/drawable/senderchatdrawable.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    <solid android:color="?attr/colorPrimary">
+    <solid android:color="@color/md_theme_light_primary">
 
     </solid>
 
