--- a/app/src/main/res/layout/activity_farmer_confandwork.xml
+++ b/app/src/main/res/layout/activity_farmer_confandwork.xml
@@ -69,52 +69,38 @@
     </com.google.android.material.appbar.AppBarLayout>
 
 
-    <com.google.android.material.tabs.TabLayout
+    <TextView
         android:id="@+id/farmer_tabs_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
+        android:text="Conference and Worshops"
+        android:paddingVertical="5dp"
+        android:textSize="24dp"
+        android:textStyle="bold"
+        android:layout_marginHorizontal="20dp"
         android:layout_marginTop="60dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/farmer_news_rv"
+        android:fillViewport="true"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:tabBackground="@drawable/back_selected"
-        app:tabIndicator="@android:color/transparent"
-        app:tabMode="auto"
-        app:tabContentStart="30dp"
-        app:tabPaddingEnd="20dp"
-        app:tabPaddingStart="20dp"
-        app:tabMinWidth="100dp"
-        app:tabTextAppearance="@style/TabTextStyle"
-        app:tabIndicatorColor="@android:color/transparent" >
+        app:layout_constraintVertical_bias="1.0"
 
-
-
-    </com.google.android.material.tabs.TabLayout>
-
-
-
-
-    <androidx.viewpager.widget.ViewPager
-
-        android:id="@+id/farmer_view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="110dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_marginBottom="40dp"
         app:layout_constraintStart_toStartOf="parent"/>
-    <!--<include
-        layout="@layout/include_farmer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"
-        android:layout_marginBottom="40dp"
-        app:layout_constraintBottom_toTopOf="@+id/tabs_layout_nav"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />-->
+
 
     <LinearLayout
         android:id="@+id/tabs_layout_nav"
