--- a/app/src/main/res/layout/activity_farmer_specific_chat.xml
+++ b/app/src/main/res/layout/activity_farmer_specific_chat.xml
@@ -31,8 +31,8 @@
 
 
             <androidx.cardview.widget.CardView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:id="@+id/cardviewofspeficuser"
                 android:layout_marginLeft="5dp"
                 android:layout_toRightOf="@id/backbuttonofspecificchat"
@@ -81,59 +81,77 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/getmessage"
+        android:layout_above="@id/getmessage_layout"
         android:id="@+id/recyclerviewofspecific"
         android:layout_below="@id/toolbarofspecificchat"
-        android:padding="5dp">
+        android:padding="10dp">
 
     </androidx.recyclerview.widget.RecyclerView>
 
-    <EditText
-        android:id="@+id/getmessage"
+
+    <LinearLayout
+        android:id="@+id/getmessage_layout"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="65dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="55dp"
-        android:layout_marginBottom="5dp"
-        android:hint="Type a message"
-        android:paddingLeft="20dp"
-        android:paddingEnd="10dp"
-        android:textAlignment="textStart"
-        android:textColor="@color/black"
-        android:textColorHint="#A8A7A7"
-        android:textSize="18sp" />
+        android:orientation="horizontal">
 
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:id="@+id/carviewofsendmessage"
-        android:layout_toRightOf="@id/getmessage"
-        android:layout_marginLeft="-50dp"
-        android:layout_marginBottom="5dp"
-        android:backgroundTint="@color/md_theme_light_primary"
-        android:layout_alignParentBottom="true"
-        app:cardCornerRadius="45dp">
-
-
-        <ImageButton
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_baseline_arrow_forward_24"
-            android:padding="5dp"
-            android:backgroundTint="@android:color/transparent"
-            android:background="@android:color/transparent"
-            android:id="@+id/imageviewsendmessage"
-            android:layout_gravity="center"
-            android:scaleType="centerCrop"
-            app:tint="@color/white">
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:cardCornerRadius="20dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginVertical="5dp"
+            >
 
-        </ImageButton>
+        <EditText
+            android:background="@null"
+            android:id="@+id/getmessage"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:hint="Type your message here ..."
+            android:paddingLeft="20dp"
+            android:paddingEnd="10dp"
+            android:textAlignment="textStart"
+            android:textColor="@color/black"
+            android:textColorHint="#A8A7A7"
+            android:textSize="18sp" />
+
+        </androidx.cardview.widget.CardView>
 
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/carviewofsendmessage"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginVertical="5dp"
+            android:layout_marginRight="10dp"
+            android:layout_alignParentBottom="true"
+            android:layout_toRightOf="@id/getmessage"
+            android:backgroundTint="@color/md_theme_light_primary"
+            app:cardCornerRadius="45dp">
 
-    </androidx.cardview.widget.CardView>
+
+            <ImageButton
+                android:id="@+id/imageviewsendmessage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="@android:color/transparent"
+                android:backgroundTint="@android:color/transparent"
+                android:padding="5dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_baseline_arrow_forward_24"
+                app:tint="@color/white">
+
+            </ImageButton>
+
+
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
 
 
 </RelativeLayout>
