--- a/app/src/main/res/layout/popup_news.xml
+++ b/app/src/main/res/layout/popup_news.xml
@@ -33,13 +33,10 @@
         android:id="@+id/popup_news_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        android:layout_marginTop="4dp"
         android:paddingRight="25dp"
         android:text="xx:xx:xxxx"
         android:textColor="@color/black"
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@+id/popup_news_description"
+        app:layout_constraintTop_toBottomOf="@+id/popup_news_title"
         tools:layout_editor_absoluteX="9dp" />
 
     <TextView
@@ -67,13 +64,13 @@
         android:id="@+id/popup_news_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        android:layout_marginTop="4dp"
+        android:textSize="18sp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="3dp"
-        android:text="This is demo news for testing purpose asddf ff gddfdg ggggd dggggddfg   nnnmnmnm,nm mnknm nmnm nknmnm jkjk fgfg bjjhhgj hjhj ghhjghjgh khjkh jkjkjkj jkjkj hjkjhkjh hjhj jiuiuutyfh hjhj"
+        android:text="This is demo news for testing purpose"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/popup_news_title" />
+        app:layout_constraintTop_toBottomOf="@+id/popup_news_time" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
