--- a/app/src/main/res/layout/view_farmer_news.xml
+++ b/app/src/main/res/layout/view_farmer_news.xml
@@ -20,6 +20,7 @@
             android:layout_height="match_parent">
 
             <ImageView
+                android:src="@drawable/bg_farm"
                 android:scaleType="fitXY"
                 android:id="@+id/view_farmer_news_img"
                 android:layout_width="match_parent"
@@ -34,7 +35,19 @@
                 android:id="@+id/view_farmer_news_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
+                app:layout_constraintBottom_toTopOf="@+id/view_farmer_news_data"
+                app:layout_constraintStart_toStartOf="parent" />
+
+
+            <TextView
+                android:textColor="@color/white"
+                android:paddingLeft="25dp"
+                android:paddingRight="25dp"
+                android:textSize="19sp"
+                android:text="News Data ....."
+                android:id="@+id/view_farmer_news_data"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 app:layout_constraintBottom_toTopOf="@+id/view_farmer_news_time"
                 app:layout_constraintStart_toStartOf="parent" />
 
