--- a/app/src/main/res/layout/view_farmer_notification.xml
+++ b/app/src/main/res/layout/view_farmer_notification.xml
@@ -9,56 +9,51 @@
     app:cardCornerRadius="7dp"
     app:cardUseCompatPadding="true"
     app:elevation="0dp"
-    android:layout_height="90dp">
+    android:id="@+id/view_farmer_notification_cardview"
+    android:layout_height="wrap_content">
+
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="8dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_weight="0.1"
-            android:id="@+id/farmernotificationpic"
-            android:layout_width="70dp"
-            android:layout_height="70dp" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingHorizontal="15dp"
+        android:paddingVertical="10dp">
 
         <LinearLayout
-            android:layout_weight="1"
-            android:layout_marginTop="7dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/farmernotificationname"
+                android:id="@+id/view_farmer_notification_from"
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:text="Name"
-
-                android:textAlignment="center"
-                android:textSize="24sp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/farmernotificationtxt"
-                android:layout_width="243dp"
+                android:id="@+id/view_farmer_notification_date"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="notification text"
-                android:textAlignment="center"
+                android:layout_weight="0.02"
+                android:text="dd mmm yyyy"
                 android:textSize="16dp" />
 
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/farmernotificationrplay"
-            android:layout_marginTop="15dp"
-            android:layout_weight="0.1"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            tools:srcCompat="@drawable/butoonplay" />
+        <TextView
+            android:id="@+id/view_farmer_notification_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="notification text"
+            android:textSize="16dp" />
+
     </LinearLayout>
+
+
 </androidx.cardview.widget.CardView>
 
 
