--- a/app/src/main/res/layout/view_farmer_notification.xml
+++ b/app/src/main/res/layout/view_farmer_notification.xml
@@ -16,16 +16,18 @@
 
 
     <LinearLayout
+        android:id="@+id/view_farmer_notification_ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingHorizontal="15dp"
-        android:paddingVertical="10dp">
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="5dp"
+
+            android:paddingHorizontal="15dp"
+            android:paddingTop="10dp"
             android:orientation="horizontal">
 
             <TextView
@@ -47,6 +49,9 @@
         </LinearLayout>
 
         <TextView
+
+            android:paddingHorizontal="15dp"
+            android:paddingBottom="10dp"
             android:id="@+id/view_farmer_notification_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
