--- a/app/src/main/res/layout/fragment_my_plants.xml
+++ b/app/src/main/res/layout/fragment_my_plants.xml
@@ -24,6 +24,7 @@
         android:layout_marginHorizontal="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"
         >
 
         <CheckBox
