--- a/app/src/main/res/layout/activity_anonymous.xml
+++ b/app/src/main/res/layout/activity_anonymous.xml
@@ -31,7 +31,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Anonymous User"/>
+            android:text="Sorry Anonymous User Pages are Not Ready , Please Wait !"/>
 
     </LinearLayout>
 
