--- a/app/src/main/res/layout/prompt_add_plot.xml
+++ b/app/src/main/res/layout/prompt_add_plot.xml
@@ -112,7 +112,7 @@
                     android:id="@+id/prompt_add_plot_text"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
-                    android:hint="File name"
+                    android:hint="Select farm Image"
                     android:layout_marginBottom="5dp"/>
 
 
