--- a/app/src/main/res/layout/activity_farmer_specific_chat.xml
+++ b/app/src/main/res/layout/activity_farmer_specific_chat.xml
@@ -14,7 +14,7 @@
         android:background="@color/md_theme_light_primary"
         android:id="@+id/toolbarofspecificchat">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical">
@@ -53,25 +53,42 @@
 
             </androidx.cardview.widget.CardView>
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
 
+            <TextView
+                android:id="@+id/Nameofspecificuser"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="9dp"
+                android:layout_toRightOf="@id/cardviewofspeficuser"
+                android:text="Name of User"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:textStyle="bold">
+
+            </TextView>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Name of User"
-                android:textSize="20sp"
-                android:layout_toRightOf="@id/cardviewofspeficuser"
-                android:id="@+id/Nameofspecificuser"
+                android:textSize="14sp"
+                android:text="offline"
+                android:id="@+id/Statusofspeficuser"
                 android:layout_marginLeft="10dp"
                 android:layout_centerVertical="true"
-                android:textStyle="bold"
+                android:layout_below="@id/Nameofspecificuser"
+                android:layout_toRightOf="@id/cardviewofspeficuser"
                 android:textColor="@color/white">
 
             </TextView>
+            </LinearLayout>
 
 
-        </RelativeLayout>
+        </LinearLayout>
 
 
 
@@ -115,7 +132,6 @@
             android:paddingLeft="20dp"
             android:paddingEnd="10dp"
             android:textAlignment="textStart"
-            android:textColor="@color/black"
             android:textColorHint="#A8A7A7"
             android:textSize="18sp" />
 
