--- a/app/src/main/res/layout/popup_agent_profile.xml
+++ b/app/src/main/res/layout/popup_agent_profile.xml
@@ -44,7 +44,8 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="150dp"
                     android:layout_height="150dp"
-                    app:cardCornerRadius="100dp">
+                    app:cardCornerRadius="100dp"
+                    android:layout_margin="6dp">
 
                     <ImageView
                         android:scaleType="centerCrop"
