--- a/app/src/main/res/layout/popup_farmer_profile.xml
+++ b/app/src/main/res/layout/popup_farmer_profile.xml
@@ -39,17 +39,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+               >
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="150dp"
                     android:layout_height="150dp"
-                    app:cardCornerRadius="100dp">
+                    app:cardCornerRadius="100dp"
+                    android:layout_margin="6dp">
 
                     <ImageView
                         android:id="@+id/popup_farmer_image"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"/>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
 
