--- a/app/src/main/res/layout/activity_admin_notification.xml
+++ b/app/src/main/res/layout/activity_admin_notification.xml
@@ -18,31 +18,50 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageButton
+            android:background="@android:color/transparent"
             android:id="@+id/admin_home_tab"
-            android:layout_width="40dp"
 
+            android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_weight="1"
-            android:background="@android:color/transparent"
             android:src="@drawable/ic_baseline_home_24" />
 
         <ImageButton
-            android:id="@+id/admin_message_tab"
+            android:background="@android:color/transparent"
+            android:padding="0dp"
+            android:layout_margin="0dp"
+            android:id="@+id/admin_requests_tab"
+            android:layout_weight="1"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_weight="1"
+            android:src="@drawable/outline_upcoming_24" />
+
+        <ImageButton
             android:background="@android:color/transparent"
+            android:id="@+id/admin_message_tab"
+            android:layout_weight="1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/ic_baseline_message_24" />
 
         <ImageButton
-            android:id="@+id/admin_notification_tab"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_margin="0dp"
-            android:layout_weight="1"
             android:background="@android:color/transparent"
             android:padding="0dp"
+            android:layout_margin="0dp"
+            android:id="@+id/admin_notification_tab"
+            android:layout_weight="1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/ic_baseline_notifications_none_24" />
+        <ImageButton
+            android:background="@android:color/transparent"
+            android:padding="0dp"
+            android:layout_margin="0dp"
+            android:id="@+id/admin_profile_tab"
+            android:layout_weight="1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/baseline_person_black_24" />
 
 
     </LinearLayout>
