--- a/app/src/main/res/layout/activity_admin_request.xml
+++ b/app/src/main/res/layout/activity_admin_request.xml
@@ -16,12 +16,14 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:layout_weight="1"
-            android:layout_marginVertical="5dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginVertical="5dp"
+            android:layout_weight="1"
             android:text="Requests"
-            android:textSize="24sp"/>
+            android:textColor="@color/white"
+            android:textSize="24dp"
+            android:textStyle="bold" />
 
         <androidx.appcompat.widget.SearchView
             android:layout_weight="0.02"
