--- a/app/src/main/res/layout/fragment_admin_connections.xml
+++ b/app/src/main/res/layout/fragment_admin_connections.xml
@@ -26,6 +26,8 @@
 
 
     <ListView
+        android:divider="@null"
+        android:dividerHeight="0dp"
         android:id="@+id/fragment_admin_con_farmer_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
