--- a/app/src/main/res/layout/fragment_admin_control_agents.xml
+++ b/app/src/main/res/layout/fragment_admin_control_agents.xml
@@ -27,6 +27,8 @@
 
 
     <ListView
+        android:divider="@null"
+        android:dividerHeight="0dp"
         android:id="@+id/fragment_admin_agent_list_lv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
