--- a/app/src/main/res/layout/fragment_admin_control_rejected_agents.xml
+++ b/app/src/main/res/layout/fragment_admin_control_rejected_agents.xml
@@ -25,6 +25,8 @@
 
     </LinearLayout>
     <ListView
+        android:divider="@null"
+        android:dividerHeight="0dp"
         android:layout_marginTop="46dp"
         android:id="@+id/admin_control_rejected_agent_list"
         android:layout_width="match_parent"
