--- a/app/src/main/res/layout/fragment_admin_dashboard_farmer.xml
+++ b/app/src/main/res/layout/fragment_admin_dashboard_farmer.xml
@@ -24,6 +24,8 @@
 
     </LinearLayout>
     <ListView
+        android:divider="@null"
+        android:dividerHeight="0dp"
         android:id="@+id/admin_dash_farmer_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
