--- a/app/src/main/res/layout/fragment_admin_dashboard_home.xml
+++ b/app/src/main/res/layout/fragment_admin_dashboard_home.xml
@@ -4,10 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingBottom="10dp">
 
 
     <androidx.cardview.widget.CardView
@@ -225,15 +226,12 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/admin_dash_card_2"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_margin="18dp"
-        android:layout_marginTop="24dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="18dp"
+        android:layout_marginVertical="10dp"
         android:backgroundTint="?attr/colorPrimary"
-        android:elevation="18dp"
         android:foregroundGravity="bottom|center"
         android:outlineSpotShadowColor="@color/black"
-        android:text="Status"
-        android:textSize="24sp"
         app:cardCornerRadius="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/admin_dash_card_agent">
@@ -241,29 +239,34 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="18dp"
+                android:layout_marginHorizontal="18dp"
                 android:layout_marginTop="24dp"
+                android:layout_marginBottom="20dp"
                 android:text="Status"
-                android:textSize="24sp"
+                android:textSize="26sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
 
             <ListView
-                android:layout_margin="20dp"
                 android:id="@+id/admin_dash_list"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
+                android:layout_height="300dp"
+                android:layout_marginHorizontal="24dp"
+                android:layout_marginBottom="18dp"
+                android:isScrollContainer="false"
+                android:overScrollMode="never"
+                android:scrollbars="none" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>>
 </ScrollView>
