--- a/app/src/main/res/layout/fragment_admin_newfarmer_control.xml
+++ b/app/src/main/res/layout/fragment_admin_newfarmer_control.xml
@@ -35,5 +35,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:divider="@null"
+        android:dividerHeight="0dp"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
 </androidx.constraintlayout.widget.ConstraintLayout>
