renamed a package and created file to see farmer plant

--- a/app/src/main/res/layout/fragment_plot_profile.xml
+++ b/app/src/main/res/layout/fragment_plot_profile.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    tools:context=".Admin.Dashboard.Farmer.FarmerControl.Profile.PlotProfileFragment">
+    tools:context=".Admin.Dashboard.Farmer.FarmerProfile.Profile.PlotProfileFragment">
 
     <ListView
         android:id="@+id/fragment_farmer_plot_list"
